Update run script